Recently played on main section (kinda) done

--- a/index.html
+++ b/index.html
@@ -11,9 +11,86 @@
       <link rel="stylesheet" href="./CSS/index.css"> 
         <title>SPOTIFY WEB</title>
     </head>
+
     <body>
-      <header></header>
-      <main></main>
-      <footer></footer>
+
+      <main class="flex container">
+
+        <nav></nav>
+
+        <section class="big-section">
+            <section class="top-bar flex">
+                <button class=>EFFETTUA L'UPGRADE</button>
+            </section>
+
+            <section class="main-section">
+                <div>
+                    <ul class="main-ul flex">
+                        <li>IN EVIDENZA</li>
+                        <li>PODCAST</li>
+                        <li>CLASSIFICHE</li>
+                        <li>GENERI E MOOD</li>
+                        <li>NUOVE USCITE</li>
+                        <li>SCOPRI</li>
+                    </ul>
+                </div>
+
+                <h1>Recently played</h1>
+                <div class="cd-container flex">
+                    <div class="cd">
+                        <img src="./img/metal_lifting.jpg" alt="">
+                        <h2>Heavy Metal</h2>
+                        <p>Subtitle</p>
+                    </div>
+                    <div class="cd">
+                        <img src="./img/stranger.jpeg" alt="">
+                        <h2>Stranger Things, Vol. 1 (a Netflix Original Series Soundtrack)</h2>
+                        <p>Kyle Dixon & Michael Stein</p>
+                    </div>
+                    <div class="cd">
+                        <img src="./img/aquietplace.jpeg" alt="">
+                        <h2>A quiet place</h2>
+                        <p>Subtitle</p>
+                    </div>
+                    <div class="cd">
+                        <img src="./img/split.jpeg" alt="">
+                        <h2>Split</h2>
+                        <p>Subtitle</p>
+                    </div>
+                    <div class="cd">
+                        <img src="./img/cure.jpeg" alt="">
+                        <h2>A cure for wellness</h2>
+                        <p>Subtitle</p>
+                    </div>
+                    <div class="cd">
+                        <img src="./img/sinister.jpeg" alt="">
+                        <h2>Sinister</h2>
+                        <p>Subtitle</p>
+                    </div>
+                </div>
+                <h1>Creato per John Doe</h1>
+                <p>Più ascolti, più accurati saranno i suggerimenti.</p>
+                <div>
+                    <div></div>
+                    <div></div>
+                </div>
+                <h1></h1>
+                <p></p>
+                <div>
+                    <div></div>
+                    <div></div>
+                </div>
+            </section>
+        </section>
+      </main>
+      <footer class="container flex between">
+        <div>
+            <img class="small-img" src="./img/sinister.jpeg" alt="">
+            <div>
+
+            </div>
+        </div>
+        <div></div>
+      </footer>
     </body>
 </html>
