--- a/index.html
+++ b/index.html
@@ -16,7 +16,29 @@
 
       <main class="flex container">
 
-        <nav></nav>
+        <nav>
+            <img class="logo" src="./img/logo.svg" alt="">
+            <div>
+                <ul class="home-list ">
+                    <li><img src="./img/home.svg" alt=""> Home</li>
+                    <li><img src="./img/search.svg" alt=""> Cerca</li>
+                    <li><img src="./img/libreria.svg" alt=""> La tua libreria</li>
+                </ul>
+            </div>
+            <h2>PLAYLIST</h2>
+            <h3>Crea Playlist</h3>
+            <div>
+                <ul>
+                    <li>Nome Playlist</li>
+                    <li>Nome Playlist</li>
+                    <li>Nome Playlist</li>
+                    <li>Nome Playlist</li>
+                    <li>Nome Playlist</li>
+                    <li>Nome Playlist</li>
+                    <li>Nome Playlist</li>
+                </ul>
+            </div>
+        </nav>
 
         <section class="big-section">
             <section class="top-bar flex">
@@ -39,6 +61,8 @@
                 <div class="cd-container flex">
                     <div class="cd">
                         <img src="./img/metal_lifting.jpg" alt="">
+                        <i class="fa-regular fa-circle-play fa-2xl"></i>
+                        
                         <h2>Heavy Metal</h2>
                         <p>Subtitle</p>
                     </div>
@@ -68,26 +92,48 @@
                         <p>Subtitle</p>
                     </div>
                 </div>
+
                 <h1>Creato per John Doe</h1>
                 <p>Più ascolti, più accurati saranno i suggerimenti.</p>
-                <div>
-                    <div></div>
-                    <div></div>
+
+                <div class="cd-container flex">
+                    <div class="cd">
+                        <img src="./img/radar.jpeg" alt="">
+                        <h2>Release Radar</h2>
+                    </div>
+                    <div class="cd">
+                        <img src="./img/mixdaily.jpeg" alt="">
+                        <h2>Daily Mix 1</h2>
+                    </div>
                 </div>
-                <h1></h1>
-                <p></p>
-                <div>
-                    <div></div>
-                    <div></div>
+
+                <h1>Artisti più popolari</h1>
+                <p>Più ascolti, più accurati saranno i suggerimenti.</p>
+                <div class="cd-container round flex">
+                    <div class="cd">
+                        <img src="./img/youg.jpeg" alt="">
+                        <h2>Lana del Ray</h2>
+                    </div>
+                    <div class="cd">
+                        <img src="./img/einaudi.jpeg" alt="">
+                        <h2>Ludovico Einaudi</h2>
+                    </div>
                 </div>
             </section>
         </section>
       </main>
       <footer class="container flex between">
-        <div>
-            <img class="small-img" src="./img/sinister.jpeg" alt="">
-            <div>
-
+        <div class="brano flex">
+            <div class="flex">
+                <img class="small-img" src="./img/sinister.jpeg" alt="">
+                <div>
+                    <h4>Sinister</h4>
+                    <p>Brano nome</p>
+                </div>
+            </div>
+            <div class="flex">
+                <i class="fa-regular fa-heart"></i>
+                <i class="fa-regular fa-folder"></i>
             </div>
         </div>
         <div></div>
