--- a/index.html
+++ b/index.html
@@ -16,27 +16,46 @@
 
       <main class="flex container">
 
-        <nav>
-            <img class="logo" src="./img/logo.svg" alt="">
+        <nav class="flex">
             <div>
-                <ul class="home-list ">
-                    <li><img src="./img/home.svg" alt=""> Home</li>
-                    <li><img src="./img/search.svg" alt=""> Cerca</li>
-                    <li><img src="./img/libreria.svg" alt=""> La tua libreria</li>
-                </ul>
+                <img class="logo" src="./img/logo.svg" alt="">
+                <img class="logo-small" src="./img/logo-small.svg" alt="">
+
+                <div>
+                    <ul class="home-list ">
+                        <li><img class="nav-img" src="./img/home.svg" alt=""> <span>Home</span> </li>
+                        <li><img class="nav-img" src="./img/search.svg" alt=""> <span>Cerca</span></li>
+                        <li><img class="nav-img" src="./img/libreria.svg" alt=""> <span> La tua libreria</span></li>
+                    </ul>
+                </div>
+                
+                <div class="playlist">
+                    <h2>PLAYLIST</h2>
+                    <h3><i class="fa-solid fa-square-plus fa-2xl"></i> Crea Playlist</h3>
+                    <div>
+                        <ul class="playlist-name">
+                            <li>Nome Playlist</li>
+                            <li>Nome Playlist</li>
+                            <li>Nome Playlist</li>
+                            <li>Nome Playlist</li>
+                            <li>Nome Playlist</li>
+                            <li>Nome Playlist</li>
+                            <li>Nome Playlist</li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-            <h2>PLAYLIST</h2>
-            <h3>Crea Playlist</h3>
-            <div>
-                <ul>
-                    <li>Nome Playlist</li>
-                    <li>Nome Playlist</li>
-                    <li>Nome Playlist</li>
-                    <li>Nome Playlist</li>
-                    <li>Nome Playlist</li>
-                    <li>Nome Playlist</li>
-                    <li>Nome Playlist</li>
-                </ul>
+
+            <div class="user flex">
+                <div class="install flex">
+                    <i class="fa-regular fa-circle-down fa-xs"></i> 
+                    <p>Installa app</p>
+                </div>
+                <div class="line flex"></div>
+                <div class="user-profile flex">
+                    <img class="profile-img" src="./img/profile.svg" alt="">
+                    <h2>John Doe</h2>
+                </div>
             </div>
         </nav>
 
