--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
         <section class="big-section">
             <section class="top-bar flex">
-                <button class=>EFFETTUA L'UPGRADE</button>
+                <button class="big-button">EFFETTUA L'UPGRADE</button>
             </section>
 
             <section class="main-section">
@@ -82,7 +82,7 @@
                 <div class="cd-container flex">
                     <div class="cd">
                         <img src="./img/metal_lifting.jpg" alt="">
-                        <i class="fa-regular fa-circle-play fa-2xl"></i>
+                        <i class="cd-play fa-regular fa-circle-play fa-2xl"></i>
                         
                         <h2>Heavy Metal</h2>
                         <p>Subtitle</p>
@@ -147,25 +147,46 @@
       <footer class="container flex between">
 
         <div class="brano flex">
-            <div class="flex">
+            <div class="container-brano flex">
                 <img class="small-img" src="./img/sinister.jpeg" alt="">
                 <div>
                     <h4>Sinister</h4>
                     <p>Brano nome</p>
                 </div>
             </div>
-            <div class="flex">
+            <div class="heart-folder flex">
                 <i class="fa-regular fa-heart"></i>
                 <i class="fa-regular fa-folder"></i>
             </div>
         </div>
 
         <div class="player flex">
-            <div class="buttons"></div>
-            <div class="player-bar"></div>
+            <div class="buttons flex">
+                <button><i class="fa-solid fa-shuffle"></i></button>
+                <button><i class="fa-solid fa-backward-step"></i></button>
+                <button><i class="big-play fa-regular fa-circle-play"></i></button>
+                <button><i class="fa-solid fa-forward-step"></i></button>
+                <button><i class="fa-solid fa-rotate-right"></i></button>
+            </div>
+            <div class="player-bar flex" >
+                <p>0:25</p>
+                <div class="bar flex">
+                    <div class="base-bar"></div>
+                    <div class="proceeding"></div>
+                </div>
+                <p>4:35</p>
+            </div>
         </div>
 
-        <div class="volume flex"></div>
+        <div class="details flex">
+            <div><i class="fa-solid fa-list"></i></div>
+            <div><i class="fa-solid fa-desktop"></i></div>
+            <div><i class="fa-solid fa-volume-high"></i></div>
+            <div class="bar flex">
+                <div class="volume-bar"></div>
+                <div class="volume-level"></div>
+            </div>
+        </div>
 
       </footer>
     </body>
