--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
                 <div class="bar flex">
                     <div class="base-bar"></div>
                     <div class="proceeding"></div>
+                    <i class="fa-solid fa-circle"></i>
                 </div>
                 <p>4:35</p>
             </div>
@@ -185,6 +186,7 @@
             <div class="bar flex">
                 <div class="volume-bar"></div>
                 <div class="volume-level"></div>
+                <i class="fa-solid fa-circle"></i>
             </div>
         </div>
 
