Hover almost done

--- a/index.html
+++ b/index.html
@@ -81,34 +81,50 @@
                 <h1>Recently played</h1>
                 <div class="cd-container flex">
                     <div class="cd">
-                        <img src="./img/metal_lifting.jpg" alt="">
-                        <i class="cd-play fa-regular fa-circle-play fa-2xl"></i>
-                        
+                        <div class="cd-img">
+                            <img src="./img/metal_lifting.jpg" alt="">
+                            <i class="cd-play fa-regular fa-circle-play"></i>
+                        </div>
                         <h2>Heavy Metal</h2>
                         <p>Subtitle</p>
                     </div>
                     <div class="cd">
-                        <img src="./img/stranger.jpeg" alt="">
+                        <div class="cd-img">
+                            <img src="./img/stranger.jpeg" alt="">
+                            <i class="cd-play fa-regular fa-circle-play"></i>
+                        </div>
                         <h2>Stranger Things, Vol. 1 (a Netflix Original Series Soundtrack)</h2>
                         <p>Kyle Dixon & Michael Stein</p>
                     </div>
                     <div class="cd">
-                        <img src="./img/aquietplace.jpeg" alt="">
+                        <div class="cd-img">
+                            <img src="./img/aquietplace.jpeg" alt="">
+                            <i class="cd-play fa-regular fa-circle-play"></i>
+                        </div>
                         <h2>A quiet place</h2>
                         <p>Subtitle</p>
                     </div>
                     <div class="cd">
-                        <img src="./img/split.jpeg" alt="">
+                        <div class="cd-img">
+                            <img src="./img/split.jpeg" alt="">
+                            <i class="cd-play fa-regular fa-circle-play"></i>
+                        </div>
                         <h2>Split</h2>
                         <p>Subtitle</p>
                     </div>
                     <div class="cd">
-                        <img src="./img/cure.jpeg" alt="">
+                        <div class="cd-img">
+                            <img src="./img/cure.jpeg" alt="">
+                            <i class="cd-play fa-regular fa-circle-play"></i>
+                        </div>
                         <h2>A cure for wellness</h2>
                         <p>Subtitle</p>
                     </div>
                     <div class="cd">
-                        <img src="./img/sinister.jpeg" alt="">
+                        <div class="cd-img">
+                            <img src="./img/sinister.jpeg" alt="">
+                            <i class="cd-play fa-regular fa-circle-play"></i>
+                        </div>
                         <h2>Sinister</h2>
                         <p>Subtitle</p>
                     </div>
@@ -119,11 +135,17 @@
 
                 <div class="cd-container flex">
                     <div class="cd">
-                        <img src="./img/radar.jpeg" alt="">
+                        <div class="cd-img">
+                            <img src="./img/radar.jpeg" alt="">
+                            <i class="cd-play fa-regular fa-circle-play"></i>
+                        </div>
                         <h2>Release Radar</h2>
                     </div>
                     <div class="cd">
-                        <img src="./img/mixdaily.jpeg" alt="">
+                        <div class="cd-img">
+                            <img src="./img/mixdaily.jpeg" alt="">
+                            <i class="cd-play fa-regular fa-circle-play"></i>
+                        </div>
                         <h2>Daily Mix 1</h2>
                     </div>
                 </div>
@@ -132,11 +154,17 @@
                 <p class="subtitle">Più ascolti, più accurati saranno i suggerimenti.</p>
                 <div class="cd-container round flex">
                     <div class="cd">
-                        <img src="./img/youg.jpeg" alt="">
+                        <div class="cd-img">
+                            <img src="./img/youg.jpeg" alt="">
+                            <i class="cd-play fa-regular fa-circle-play"></i>
+                        </div>
                         <h2>Lana del Ray</h2>
                     </div>
                     <div class="cd">
-                        <img src="./img/einaudi.jpeg" alt="">
+                        <div class="cd-img">
+                            <img src="./img/einaudi.jpeg" alt="">
+                            <i class="cd-play fa-regular fa-circle-play"></i>
+                        </div>
                         <h2>Ludovico Einaudi</h2>
                     </div>
                 </div>
@@ -172,8 +200,9 @@
                 <p>0:25</p>
                 <div class="bar flex">
                     <div class="base-bar"></div>
-                    <div class="proceeding"></div>
-                    <i class="fa-solid fa-circle"></i>
+                    <div class="proceeding">
+                        <i class="proceeding-circle fa-solid fa-circle"></i>
+                    </div>
                 </div>
                 <p>4:35</p>
             </div>
@@ -186,7 +215,7 @@
             <div class="bar flex">
                 <div class="volume-bar"></div>
                 <div class="volume-level"></div>
-                <i class="fa-solid fa-circle"></i>
+                <i class="volume-circle fa-solid fa-circle"></i>
             </div>
         </div>
 
