Hover on bar done

--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
 
                 <div>
                     <ul class="home-list ">
-                        <li class="vertical-green flex"><div class="green-line"></div><img class="nav-img" src="./img/home.svg" alt=""> <span>Home</span> </li>
+                        <li class="vertical-green flex">
+                            <div class="green-line"></div><img class="nav-img" src="./img/home.svg" alt=""> 
+                            <span>Home</span> 
+                        </li>
                         <li><img class="nav-img" src="./img/search.svg" alt=""> <span>Cerca</span></li>
                         <li><img class="nav-img" src="./img/libreria.svg" alt=""> <span> La tua libreria</span></li>
                     </ul>
@@ -198,9 +201,9 @@
             </div>
             <div class="player-bar flex" >
                 <p>0:25</p>
-                <div class="bar flex">
+                <div class="base-bar-wrapper bar flex">
                     <div class="base-bar"></div>
-                    <div class="proceeding">
+                    <div class="proceeding flex">
                         <i class="proceeding-circle fa-solid fa-circle"></i>
                     </div>
                 </div>
@@ -209,13 +212,14 @@
         </div>
 
         <div class="details flex">
-            <div><i class="fa-solid fa-list"></i></div>
-            <div><i class="fa-solid fa-desktop"></i></div>
-            <div><i class="fa-solid fa-volume-high"></i></div>
-            <div class="bar flex">
+            <div><i class=" list fa-solid fa-list"></i></div>
+            <div><i class="desktop fa-solid fa-desktop"></i></div>
+            <div><i class="volume-icon fa-solid fa-volume-high"></i></div>
+            <div class="volume-bar-wrapper bar flex">
                 <div class="volume-bar"></div>
-                <div class="volume-level"></div>
-                <i class="volume-circle fa-solid fa-circle"></i>
+                <div class="volume-level flex">
+                    <i class="volume-circle fa-solid fa-circle"></i>
+                </div>
             </div>
         </div>
 
