Minor changes on hover

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
                 <div>
                     <ul class="home-list ">
-                        <li class="vertical-green flex">
+                        <li class="vertical-green">
                             <div class="green-line"></div><img class="nav-img" src="./img/home.svg" alt=""> 
                             <span>Home</span> 
                         </li>
@@ -51,7 +51,7 @@
 
             <div class="user flex">
                 <div class="install flex">
-                    <i class="fa-regular fa-circle-down fa-xs"></i> 
+                    <i class="circle-down fa-regular fa-circle-down fa-xs"></i> 
                     <p>Installa app</p>
                 </div>
                 <div class="line flex"></div>
@@ -157,15 +157,15 @@
                 <p class="subtitle">Più ascolti, più accurati saranno i suggerimenti.</p>
                 <div class="cd-container round flex">
                     <div class="cd">
-                        <div class="cd-img">
-                            <img src="./img/youg.jpeg" alt="">
+                        <div class="cd-img border-radius">
+                            <img class="border-radius" src="./img/youg.jpeg" alt="">
                             <i class="cd-play fa-regular fa-circle-play"></i>
                         </div>
                         <h2>Lana del Ray</h2>
                     </div>
                     <div class="cd">
-                        <div class="cd-img">
-                            <img src="./img/einaudi.jpeg" alt="">
+                        <div class="cd-img border-radius">
+                            <img class="border-radius" src="./img/einaudi.jpeg" alt="">
                             <i class="cd-play fa-regular fa-circle-play"></i>
                         </div>
                         <h2>Ludovico Einaudi</h2>
