Exercise  complete (except for the cd-container)

--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
             <div class="user flex">
                 <div class="install flex">
                     <i class="circle-down fa-regular fa-circle-down fa-xs"></i> 
-                    <p>Installa app</p>
+                    <p class="no-show">Installa app</p>
                 </div>
-                <div class="line flex"></div>
+                <div class="line no-show flex"></div>
                 <div class="user-profile flex">
                     <img class="profile-img" src="./img/profile.svg" alt="">
-                    <h2>John Doe</h2>
+                    <h2 class="no-show">John Doe</h2>
                 </div>
             </div>
         </nav>
